tests/testfiles/passing/invalid_identifiers/keyword_as_id_const.c
/* Keyword as identifier: const */
int main() {
    int const;
    const = 23;
}